crates/uitest/fixtures/name_resolution/conflict_variant.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: crates/uitest/fixtures/name_resolution/conflict_variant.fe
---
error[2-0001]: `Var1` conflicts with other definitions
  ┌─ conflict_variant.fe:2:5
  │
2 │     Var1,
  │     ^^^^ `Var1` is defined here
3 │     Var2,
4 │     Var1,
  │     ---- `Var1` is redefined here


